<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nebula </string>
    <string name="version">Version </string>
    <string name="company_profile">Company Profile</string>
    <string name="products">Products</string>
    <string name="events">Events</string>
    <string name="videos">Videos</string>
    <string name="contact_us">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="newsletters">Newsletters</string>
    <string name="edocs">E-Documents</string>
    <string name="ebro">E-Brochures</string>
    <string name="bookingforms">Booking Forms</string>
    <string name="leaflets">Leaflets</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="vision">Vision</string>
    <string name="vision_para">Happy customers all\naround.</string>
    <string name="mission">Mission</string>
    <string name="mission_para">Building hotels,\n homes &amp; dreams.</string>
    <string name="values">Values</string>
    <string name="values_para">We deliver on Promises.\nTrust &amp; Responsibility.</string>
    <string name="pacifica_view">A privately held vertically integrated real estate and hospitality conglomerate with a global presence across USA, India &amp; Mexico and a 2.7 billion USD turnover.</string>
    <string name="futura_view">A diversified group with expertise in contracting &amp; project management for E&amp;P in the O&amp;G industry. Futura is also involved in pharmaceutical, IT and EXIM industry.</string>
    <string name="kesar_view">One of the largest land aggregators of Gujarat with a proven track record of having developed millions of square feet of residential and commercial projects.</string>
    <string name="expertise">Expertise</string>
    <string name="expertise_kesar">Land Aggregation, Affordable Housing</string>
    <string name="expertise_futura">O&amp;G Commissioning and Manpower supply</string>
    <string name="expertise_pacifica">Real Estate development\n(Commercial, Residential)</string>
    <string name="forgot_your_password_customer" translatable="false">Reset Password</string>
    <string name="income_summary">Income Summary</string>
    <string name="promotion_details">Promotion Details</string>
    <string name="downloads">Downloads</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="product_name">Product Name</string>
    <string name="bv">BV%</string>
    <string name="bv_">BV : </string>
    <string name="retail_profit">Retail Profit%</string>
    <string name="nv">NV</string>
    <string name="receipt_date">Receipt Date</string>
    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="emi_no">EMI No</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="type">Type</string>
    <string name="leadership_bonus">Leadership Bonus</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="total">Total</string>
    <string name="Aavaas_sanand" translatable="false">Aavaas, Sanand</string>
    <string name="aavaas_details_sanand" translatable="false">Lavish 4.12 Acre Community | Spacious 1 &amp; 2 BHK Apartments | 11 Towers of 6 Storeys &amp; 2 Towers of 7 Storeys each | Clubhouse with Modern Features | Landscaped
Garden with Lifestyle Facilities for all age groups | 24 x 7 Security Solutions | Conveniently located near Proposed 24 Meter Road at Sanand.</string>
    <string name="project_highlights_sanand" translatable="false">Project Highlights</string>
    <string name="abad_highlight1_sanand" translatable="false">Club House</string>
    <string name="abad_highlight2_sanand" translatable="false">Swimming Pool</string>
    <string name="abad_highlight3_sanand" translatable="false">Jogging Track</string>
    <string name="abad_highlight4_sanand" translatable="false">Badminton</string>
    <string name="abad_highlight5_sanand" translatable="false">Car Parking</string>
    <string name="abad_highlight6_sanand" translatable="false">Box Cricket Pitch</string>
    <string name="abad_highlight7_sanand" translatable="false">Landscaped Garden</string>
    <string name="abad_highlight8_sanand" translatable="false">Senior Citizen Sit Out</string>
    <string name="abad_highlight9_sanand" translatable="false">Kids Play Area</string>
    <string name="Aavaas">Aavaas, Changodar</string>
    <string name="aavaas_details">At affordable luxurious lifestyle for the first time in Ahmedabad that offers best lifestyle experiences at a strategic location of the city. It is time to shape the future and make the dream a reality with the best of facilities and features available in an affordable way.</string>
    <string name="project_highlights">Project Highlights</string>
    <string name="abad_highlight1">1 RK, 1 BHK &amp; 2 BHK Apartments</string>
    <string name="abad_highlight2">56 Buildings of G+3 Storeys</string>
    <string name="abad_highlight3">Over 19 Acres</string>
    <string name="abad_highlight4">Daily conveniences, schools &amp; colleges</string>
    <string name="abad_highlight5">20 minutes from City Center</string>
    <string name="abad_highlight6">Clubhouse with Community Hall</string>
    <string name="Hawthorn">Hawthorn, Dwarka</string>
    <string name="hawthorn_details">Nebula\'s 5 star eco-spiritual resort of luxury Villas is spread across 15 acres. This resort is one of a kind boasting handpicked amenities to immerse you in peace and tranquility of the holy land, soothing your body mind and soul.</string>
    <string name="dwarka_highlight1">200 Villas</string>
    <string name="dwarka_highlight2">60+ Suites</string>
    <string name="dwarka_highlight3">1 BHK (Deluxe &amp; Super Deluxe) &amp; 2 BHK (Super Deluxe)</string>
    <string name="dwarka_highlight4">The Krishna Museum</string>
    <string name="dwarka_highlight5">Stargazing Camps</string>
    <string name="dwarka_highlight6">Dhyana Meditation Garden/Prana Herbal Spa And Wellness Center</string>
    <string name="Aavaas_Hyderabad">Aavaas, Hyderabad</string>
    <string name="hyderabad_details">Situated in the north-west region of Hyderabad, Bachupally is a vicinity that has metamorphosed into a bustling IT hub. Located in the Quthbullapur Mandal, the neighbourhood is encircled by Suraram Village in east, Bollaram Industrial to the west, Bowrampet in the north and Whisper Valley towards the south. Apart from the manmade infrastructure, Bachupally is also a nature-lovers haven with lots of lakes and ponds in and around the area. The vicinity is cited to be a gold mine thanks to its greenery.</string>
    <string name="hbad_highlight1">1 BHK &amp; 2 BHK</string>
    <string name="hbad_highlight2">Over 10 Acres</string>
    <string name="hbad_highlight3">High rise multi storey buildings</string>
    <string name="hbad_highlight4">Yoga Center</string>
    <string name="hbad_highlight5">Library</string>
    <string name="hbad_highlight6">Party Lawn</string>
    <string name="chennai_highlight1" translatable="false">1, 1.5, 2 BHK Homes</string>
    <string name="chennai_highlight2" translatable="false">1568 Units in Phase 1</string>
    <string name="chennai_highlight3" translatable="false">Easy Connectivity by Road &amp; Rail</string>
    <string name="chennai_highlight4" translatable="false">Home to IT, Automobile</string>
    <string name="chennai_highlight5" translatable="false">Land spread Across 22 Acres</string>
    <string name="chennai_highlight6" translatable="false">Lifestyle Amenities</string>
    <string name="office_address">705, Shivalik Abaise, Prahladnagar, Ahmedabad - 380 015</string>
    <string name="phone"><u>+91 79 6621 2222</u></string>
    <string name="toll_free_phone_number"><u>1800 123 7073 (Toll Free)</u></string>
    <string name="office_fax_number">+91 79 6621 2200 (Fax)</string>
    <string name="office_email"><u>info@nebulacompanies.com</u></string>
    <string name="rank_and_volumes">Rank &amp; Volumes</string>
    <string name="my_bv_commission">My BV Commission</string>
    <string name="member_name_">Member Name</string>
    <string name="member_id_">Member ID</string>
    <string name="closing_date">Closing Date</string>
    <string name="my_bv">My BV %</string>
    <string name="rank">Rank</string>
    <string name="gold_income_">Gold Income</string>
    <string name="total_bv_commission">Total BV Commission</string>
    <string name="more_info">More Info</string>
    <string name="info_">Info</string>
    <string name="bv_from_sales">BV From Sales</string>
    <string name="fl_bv">FLBV</string>
    <string name="my_BV">My BV</string>
    <string name="dbv">DBV</string>
    <string name="dbv_commission">DBV Commission</string>
    <string name="total_income">Total Income</string>
    <string name="incomeorshare">Income / Share</string>
    <string name="sale_id">Sale ID</string>
    <string name="unit">Unit</string>
    <string name="sale_info">Sale Info</string>
    <string name="investment">Investment</string>
    <string name="payment_plan">Payment Plan</string>
    <string name="token_amount">Token Amount</string>
    <string name="dp_20">DP</string>
    <string name="discount">Discount</string>
    <string name="monthly_installment">Monthly Installment</string>
    <string name="next_installment_date">Next Installment Date</string>
    <string name="customer_info">Customer Info</string>
    <string name="state_">State</string>
    <string name="city_">City</string>
    <string name="mobile">Mobile</string>
    <string name="pincode_">Pincode</string>
    <string name="pdf_dwonload_toast">Are you sure you want to download this E-Brochure?</string>
    <string name="pdf_dwonload_toast_booking">Are you sure you want to download this Booking Form?</string>
    <string name="pdf_dwonload_toast_leaflets">Are you sure you want to download this Leaflet?</string>
    <string name="pdf_share_toast">Please download the pdf to share</string>
    <string name="newsletter_share_toast">Please download newsletter to share</string>
    <string name="image_share_toast">Please download image to share</string>
    <string name="video_download_toast">Are you sure you want to download this video?</string>
    <string name="newsletter_download_toast">Are you sure you want to download this newsletter?</string>
    <string name="ratechart_download_toast">Are you sure you want to download this rate chart?</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="otp">Enter your block and flat no. to get OTP \n on your registered mobile no.</string>
    <string name="block">Block</string>
    <string name="flat">Flat No.</string>
    <string name="needhelp">Need help?</string>
    <string name="continues">Continue</string>
    <string name="validationblocks">Please Enter Block</string>
    <string name="validationflat">Please Enter Flat No.</string>
    <string name="resendotp">Resend OTP in : </string>
    <string name="didnt_receive">Did not receive the OTP? resend</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="enterotp">Enter OTP here</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_otp_password">RESET YOUR PASSWORD </string>
    <string name="kyc">Download KYC</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="current_rank">Current Rank :</string>
    <string name="next_eligible_rank">Next Eligible Rank :</string>
    <string name="yearly_pnv">Yearly PNV :</string>
    <string name="total_dv">Total DV :</string>
</resources>